# bithub

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
bithub/: __init__.py  api.py  bench.py  builder.py  cli.py  config.py  dashboard_api.py  downloader.py  logging_setup.py  model_manager.py  registry.py  repl.py  server.py
bithub/static/: app.js  index.html  style.css
bitnet_hub/: __init__.py  api.py  builder.py  cli.py  config.py  downloader.py  registry.json  registry.py  server.py
docs/superpowers/plans/: 2026-04-08-rename-and-phase-a.md  2026-04-09-phase-b1-b2-repl-and-hf-pull.md  2026-04-09-phase-b3-multi-model.md  2026-04-09-phase-b4-web-dashboard.md  2026-04-09-phase-b5-benchmarks.md  2026-04-09-phase-c-distribution.md
docs/superpowers/specs/: 2026-04-08-bithub-worldclass-design.md
scripts/: build-bitnet.sh
tests/: conftest.py  test_api.py  test_bench.py  test_builder.py  test_cli.py  test_config.py  test_dashboard_api.py  test_direct_pull.py  test_downloader.py  test_model_manager.py  test_registry.py  test_repl.py  test_server.py
