[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bithub"
version = "0.1.0"
description = "The missing friendly interface for BitNet inference. Ollama for 1-bit LLMs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "huggingface-hub>=0.20.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "prompt-toolkit>=3.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
bithub = "bithub.cli:cli"

[project.urls]
Homepage = "https://github.com/sagarjhaa/bithub"
Issues = "https://github.com/sagarjhaa/bithub/issues"

[tool.setuptools.packages.find]
include = ["bithub*"]

[tool.setuptools.package-data]
bithub = ["registry.json", "static/**/*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
